unpackaged/main/default/objects/Opportunity/fields/Account_Invoice_Line_Layout__c.field-meta.xml
<CustomField>
    <fullName>Account_Invoice_Line_Layout__c</fullName>
    <formula>TEXT(Account.Default_Invoice_Line_Layout__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Invoice Line Layout</label>
    <type>Text</type>
</CustomField>