unpackaged/main/default/objects/Opportunity/fields/Account_IO_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_IO_Type__c</fullName>
    <formula>TEXT(Account.Default_IO_Template__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account IO Type</label>
    <type>Text</type>
</CustomField>