unpackaged/main/default/objects/Opportunity/fields/Account_Rule_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Rule_Code__c</fullName>
    <label>Account Rule Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>