unpackaged/main/default/objects/Opportunity/fields/Account_T_C_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_T_C_Type__c</fullName>
    <formula>TEXT(Account.Default_T_Cs__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account T&amp;C Type</label>
    <type>Text</type>
</CustomField>