unpackaged/main/default/objects/Opportunity/fields/Actual_Month_1__c.field-meta.xml
<CustomField>
    <fullName>Actual_Month_1__c</fullName>
    <formula>AND( TEXT(Account.Status__c) = &quot;Downgraded&quot;, MONTH(Account.Previous_Acct_End_Date__c) = MONTH(ADDMONTHS(TODAY(),-1)) , YEAR(Account.Previous_Acct_End_Date__c) = YEAR(ADDMONTHS(TODAY(),-1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Month +1</label>
    <type>Checkbox</type>
</CustomField>