unpackaged/main/default/objects/Opportunity/fields/Actual_Month__c.field-meta.xml
<CustomField>
    <fullName>Actual_Month__c</fullName>
    <formula>OR(
AND(
TEXT(Account.Status__c) = &quot;Active&quot;,
MONTH(Account.Subscription_End_Date__c) = MONTH(TODAY()),
YEAR(Account.Subscription_End_Date__c) = YEAR(TODAY())
),
AND(
TEXT(Account.Status__c) = &quot;Downgraded&quot;,
MONTH(Account.Previous_Acct_End_Date__c ) = MONTH(TODAY()),
YEAR(Account.Previous_Acct_End_Date__c) = YEAR(TODAY())
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Month</label>
    <type>Checkbox</type>
</CustomField>