unpackaged/main/default/objects/Opportunity/fields/Ad_Server__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Ad Server</description>
    <label>Ad Server</label>
    <referenceTo>csdf__Ad_Server__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>