unpackaged/main/default/objects/Opportunity/fields/Additional_Agency_If_Needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Agency_If_Needed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This agency can not be billed or included on an invoice.</inlineHelpText>
    <label>Additional Agency (If Needed)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an Account with Type of Media Agency.</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Media Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Additional Account (Non-Billing))</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>