unpackaged/main/default/objects/Opportunity/fields/Addressee__c.field-meta.xml
<CustomField>
    <fullName>Addressee__c</fullName>
    <label>Addressee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>