unpackaged/main/default/objects/Opportunity/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DSM Proposal Agency, the value is optional</description>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Agency)</relationshipLabel>
    <relationshipName>AgencyOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>