unpackaged/main/default/objects/Opportunity/fields/Agency_Client_del__c.field-meta.xml
<CustomField>
    <fullName>Agency_Client_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please add the advertiser account here. Use the &quot;Bill Advertiser&quot;-button to bill to this account.</inlineHelpText>
    <label>Advertiser Name</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Only accounts having &quot;Type = Advertiser&quot; can be added here. If you dont find your account please make sure that it exist and that the Type is set to Advertiser.</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Advertiser</value>
        </filterItems>
        <filterItems>
            <field>$Source.In_House_Sales__c</field>
            <operation>equals</operation>
            <value>In House Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Advertiser)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>