unpackaged/main/default/objects/Opportunity/fields/Agency_Commission__c.field-meta.xml
<CustomField>
    <fullName>Agency_Commission__c</fullName>
    <description>DSM Proposal Agency Commission</description>
    <inlineHelpText>Agency Commission % in DSM, used with Gross Pricing model to mark up the Net Rate by the commission %.</inlineHelpText>
    <label>DSM Agency Commission</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>