unpackaged/main/default/objects/Opportunity/fields/Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status__c</fullName>
    <label>Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out for Signature</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Cancelled / Declined</fullName>
            </value>
            <value>
                <fullName>Signed via Client IO Link</fullName>
            </value>
            <value>
                <fullName>Waiting for Counter-Signature</fullName>
                <isActive>false</isActive>
                <label>Waiting for Counter-Signature</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>