unpackaged/main/default/objects/Opportunity/fields/Agreement_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status_Date__c</fullName>
    <label>Agreement Status Date</label>
    <type>DateTime</type>
</CustomField>