unpackaged/main/default/objects/Opportunity/fields/Apply_VIP_Discount__c.field-meta.xml
<CustomField>
    <fullName>Apply_VIP_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply VIP Discount</label>
    <type>Checkbox</type>
</CustomField>