unpackaged/main/default/objects/Opportunity/fields/Appr_Code__c.field-meta.xml
<CustomField>
    <fullName>Appr_Code__c</fullName>
    <label>Appr Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>