unpackaged/main/default/objects/Opportunity/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount Approval Submitted</fullName>
            </value>
            <value>
                <fullName>Discount Approval Approved</fullName>
            </value>
            <value>
                <fullName>Discount Approval Rejected</fullName>
            </value>
            <value>
                <fullName>Re-submit Discount Approval</fullName>
            </value>
            <value>
                <fullName>Awaits OMC Approval</fullName>
            </value>
            <value>
                <fullName>OMC Approval Submitted</fullName>
            </value>
            <value>
                <fullName>OMC Approval Approved</fullName>
            </value>
            <value>
                <fullName>OMC Approval Recalled</fullName>
            </value>
            <value>
                <fullName>OMC Approval Rejected</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>NS Order Generated</fullName>
            </value>
            <value>
                <fullName>Product Owner Approved</fullName>
            </value>
            <value>
                <fullName>Director Approved</fullName>
            </value>
            <value>
                <fullName>Country Manager Approved</fullName>
            </value>
            <value>
                <fullName>CBO Approved</fullName>
            </value>
            <value>
                <fullName>Discount Approval Required</fullName>
                <isActive>false</isActive>
                <label>Discount Approval Required</label>
            </value>
            <value>
                <fullName>Manager Approved</fullName>
                <isActive>false</isActive>
                <label>Manager Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>