unpackaged/main/default/objects/Opportunity/fields/Attachment_Limit_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Limit_Exceeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachment Limit Exceeded</label>
    <type>Checkbox</type>
</CustomField>