unpackaged/main/default/objects/Opportunity/fields/b2b_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>b2b_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (b2b Billing Contact)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>