unpackaged/main/default/objects/Opportunity/fields/BasketId__c.field-meta.xml
<CustomField>
    <fullName>BasketId__c</fullName>
    <description>Denotes the basketId field set by Self Serve Portal to identify baskets/carts</description>
    <inlineHelpText>Denotes the basketId field set by Self Serve Portal to identify baskets/carts</inlineHelpText>
    <label>BasketId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>