unpackaged/main/default/objects/Opportunity/fields/Bill_To_Tier__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Tier__c</fullName>
    <label>Bill To Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>