unpackaged/main/default/objects/Opportunity/fields/Billing_City_new__c.field-meta.xml
<CustomField>
    <fullName>Billing_City_new__c</fullName>
    <label>Billing-City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>