unpackaged/main/default/objects/Opportunity/fields/Billing_Country_new__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_new__c</fullName>
    <label>Billing-Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>