unpackaged/main/default/objects/Opportunity/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <description>Billing Email pulled from Account.</description>
    <formula>IF(ISBLANK(Account.Billing_email__c), &#39;notused@propertyguru.com&#39;, Account.Billing_email__c)</formula>
    <inlineHelpText>Billing Email pulled from Account.</inlineHelpText>
    <label>Billing Email</label>
    <type>Text</type>
</CustomField>