unpackaged/main/default/objects/Opportunity/fields/Billing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Billing Entity)</relationshipLabel>
    <relationshipName>Opportunities8</relationshipName>
    <type>Lookup</type>
</CustomField>