unpackaged/main/default/objects/Opportunity/fields/Billing_Entity_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity_Suffix__c</fullName>
    <label>Billing Entity Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>