unpackaged/main/default/objects/Opportunity/fields/Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province__c</fullName>
    <formula>Account.BillingState</formula>
    <label>Billing State/Province</label>
    <type>Text</type>
</CustomField>