unpackaged/main/default/objects/Opportunity/fields/Billing_State_Province_new__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province_new__c</fullName>
    <label>Billing-State/Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>