unpackaged/main/default/objects/Opportunity/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <formula>Account.BillingStreet</formula>
    <label>Billing Street</label>
    <type>Text</type>
</CustomField>