unpackaged/main/default/objects/Opportunity/fields/Billing_Street_new__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_new__c</fullName>
    <label>Billing-Street</label>
    <type>TextArea</type>
</CustomField>