unpackaged/main/default/objects/Opportunity/fields/Billing_Zip_Postal_Code_new__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Postal_Code_new__c</fullName>
    <label>Billing-Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>