unpackaged/main/default/objects/Opportunity/fields/ByAuto__c.field-meta.xml
<CustomField>
    <fullName>ByAuto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByAuto</label>
    <type>Checkbox</type>
</CustomField>