unpackaged/main/default/objects/Opportunity/fields/ByPass_Apex__c.field-meta.xml
<CustomField>
    <fullName>ByPass_Apex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Apex</label>
    <type>Checkbox</type>
</CustomField>