unpackaged/main/default/objects/Opportunity/fields/Bypass_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To bypass &quot;Pending_Online_Payment_to_OMC&quot; validation rule. If True, the validation rule will be bypassed.</description>
    <label>Bypass Validation</label>
    <type>Checkbox</type>
</CustomField>