unpackaged/main/default/objects/Opportunity/fields/Celigo_Contract__c.field-meta.xml
<CustomField>
    <fullName>Celigo_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Celigo Contract</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Celigo Contract)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>