unpackaged/main/default/objects/Opportunity/fields/Celigo_Update__c.field-meta.xml
<CustomField>
    <fullName>Celigo_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Celigo Update</label>
    <type>Checkbox</type>
</CustomField>