unpackaged/main/default/objects/Opportunity/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <inlineHelpText>What have they already tried that isn’t working? Why? Did you introduce the pain points that aligned with our solution?</inlineHelpText>
    <label>Challenges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>