unpackaged/main/default/objects/Opportunity/fields/Clone_Default_Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Clone_Default_Account_Tier__c</fullName>
    <formula>&#39;Tier 1&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clone - Default Account Tier</label>
    <type>Text</type>
</CustomField>