unpackaged/main/default/objects/Opportunity/fields/Clone_Default_Ad_Server_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Clone_Default_Ad_Server_Time_Zone__c</fullName>
    <formula>&#39;America/New_York&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clone - Default Ad Server Time Zone</label>
    <type>Text</type>
</CustomField>