unpackaged/main/default/objects/Opportunity/fields/Clone_Default_Billing_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Clone_Default_Billing_Calendar__c</fullName>
    <formula>&#39;Standard&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clone - Default Billing Calendar</label>
    <type>Text</type>
</CustomField>