unpackaged/main/default/objects/Opportunity/fields/Clone_Default_Budget_Source__c.field-meta.xml
<CustomField>
    <fullName>Clone_Default_Budget_Source__c</fullName>
    <formula>&#39;Digital Scatter&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clone - Default Budget Source</label>
    <type>Text</type>
</CustomField>