unpackaged/main/default/objects/Opportunity/fields/Clone_Default_Empty__c.field-meta.xml
<CustomField>
    <fullName>Clone_Default_Empty__c</fullName>
    <description>Used on Selective Cloning for SO - Default Empty value</description>
    <inlineHelpText>Used on Selective Cloning for SO - Default Empty value</inlineHelpText>
    <label>Clone - Default Empty</label>
    <length>5</length>
    <type>Text</type>
</CustomField>