unpackaged/main/default/objects/Opportunity/fields/Clone_Default_False__c.field-meta.xml
<CustomField>
    <fullName>Clone_Default_False__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used on Selective Cloning for SO - Default False value</description>
    <inlineHelpText>Used on Selective Cloning for SO - Default False value</inlineHelpText>
    <label>Clone - Default False</label>
    <type>Checkbox</type>
</CustomField>