unpackaged/main/default/objects/Opportunity/fields/Clone_Default_Loading_Screen__c.field-meta.xml
<CustomField>
    <fullName>Clone_Default_Loading_Screen__c</fullName>
    <description>Used on Selective Cloning for SO - Default value for Loading Screen field</description>
    <formula>&quot;Not Started&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used on Selective Cloning for SO - Default value for Loading Screen field</inlineHelpText>
    <label>Clone - Default Loading Screen</label>
    <type>Text</type>
</CustomField>