unpackaged/main/default/objects/Opportunity/fields/Clone_Default_SO_Status__c.field-meta.xml
<CustomField>
    <fullName>Clone_Default_SO_Status__c</fullName>
    <formula>&#39;Price Recalculation Required&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clone - Default SO Status</label>
    <type>Text</type>
</CustomField>