unpackaged/main/default/objects/Opportunity/fields/Clone_Default_Zero__c.field-meta.xml
<CustomField>
    <fullName>Clone_Default_Zero__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clone - Default Zero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>