unpackaged/main/default/objects/Opportunity/fields/Clone_SO_Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Clone_SO_Previous_Status__c</fullName>
    <formula>&#39;In Progress&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clone - SO Previous Status</label>
    <type>Text</type>
</CustomField>