unpackaged/main/default/objects/Opportunity/fields/Clone_SO_Process_Message__c.field-meta.xml
<CustomField>
    <fullName>Clone_SO_Process_Message__c</fullName>
    <formula>&#39;Price Recalculation is needed on Line Items after Cloning. Please open the Line Items with (Incomplete) Status, modify them if needed, run Check Availability and Save them.&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clone - SO Process Message</label>
    <type>Text</type>
</CustomField>