unpackaged/main/default/objects/Opportunity/fields/Clone_SO_Process_Message_Severity__c.field-meta.xml
<CustomField>
    <fullName>Clone_SO_Process_Message_Severity__c</fullName>
    <formula>&#39;warning&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clone - SO Process Message Severity</label>
    <type>Text</type>
</CustomField>