unpackaged/main/default/objects/Opportunity/fields/Company_on_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Company_on_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Company used on Agreement</description>
    <inlineHelpText>Company used on Agreement</inlineHelpText>
    <label>Company on Agreement</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Company on Agreement)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>