unpackaged/main/default/objects/Opportunity/fields/Conversion_Value__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Value__c</fullName>
    <label>Conversion Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>