unpackaged/main/default/objects/Opportunity/fields/Count_of_First_Timer_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Count_of_First_Timer_Promotion__c</fullName>
    <label>Count of First Timer Promotion</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Discount_Reason__c</field>
        <operation>equals</operation>
        <value>First-Timer Discount</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>