unpackaged/main/default/objects/Opportunity/fields/Count_of_Referral_Agent_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Referral_Agent_Promotion__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count of Referral Agent Promotion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>