unpackaged/main/default/objects/Opportunity/fields/Count_of_VIP_Spending_Request__c.field-meta.xml
<CustomField>
    <fullName>Count_of_VIP_Spending_Request__c</fullName>
    <label>Count of VIP Spending Request</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Discount_Reason__c</field>
        <operation>equals</operation>
        <value>VIP (Spending)</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>