unpackaged/main/default/objects/Opportunity/fields/Count_of_VIP_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Count_of_VIP_Subscription__c</fullName>
    <label>Count of VIP Subscription</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Category__c</field>
        <operation>equals</operation>
        <value>Subscription</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Discount_Reason__c</field>
        <operation>equals</operation>
        <value>VIP (Relationship), VIP (Spending), VIP (migration)</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>