unpackaged/main/default/objects/Opportunity/fields/Count_of_VIP_Subscription_new__c.field-meta.xml
<CustomField>
    <fullName>Count_of_VIP_Subscription_new__c</fullName>
    <label>Count of VIP Subscription</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>