unpackaged/main/default/objects/Opportunity/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>TEXT(Subsidiary__r.Country__c )</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>