unpackaged/main/default/objects/Opportunity/fields/Create_NS_Customer__c.field-meta.xml
<CustomField>
    <fullName>Create_NS_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox gets update when users Submit for Discount Approval. In turn, when this field is updated, the Celigo Pull to NS on Account page will also gets updated.</description>
    <label>Create NS Customer</label>
    <type>Checkbox</type>
</CustomField>