unpackaged/main/default/objects/Opportunity/fields/Current_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Opportunity_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Current Opportunity Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>