unpackaged/main/default/objects/Opportunity/fields/Current_Sales_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Sales_Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>Current Sales Order Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>