unpackaged/main/default/objects/Opportunity/fields/Customer_Approval_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval_Expiry_Date__c</fullName>
    <formula>CASE(Agreement_Status__c , &quot;Out for Signature&quot;, Agreement_Status_Date__c +14,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Approval Expiry Date</label>
    <type>Date</type>
</CustomField>