unpackaged/main/default/objects/Opportunity/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <label>Customer PO No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>